# jimsai

./: .env.example  .env.production.example  .gitignore  .tmp_signin.json  AUDIT_REPORT_v1.md  AUTONOMOUS_AGENT_ARCHITECTURE.md  AUTONOMOUS_AGENT_DEPLOYMENT_SUMMARY.md  AUTONOMOUS_AGENT_IMPLEMENTATION_COMPLETE.md  AUTONOMOUS_AGENT_QUICK_REFERENCE.md  AUTONOMOUS_TRAINING_AGENT_GUIDE.md  AboutJims.txt  AboutJimsAi.md  CLOUD_DEPLOYMENT_ARCHITECTURE_AWS_FARGATE.md  DEPLOYMENT_AUTHORIZATION.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STACK_VERCEL_LAMBDA_RENDER.md  De-LLM_JimsAi.md  De-LLM_JimsAi_StressTest.md  ELE_CLL_Projection_Architecture_Spec.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS_SUMMARY.md  IMPLEMENTATION_SUMMARY_MULTILINGUAL_v1.md  Implementation_Plan.md  JIMSAI_IMPROVEMENT_CYCLE_REPORT_v1.md  JIMSAI_USER_SERVING_GUIDE.md  LAUNCH_QUICK_REFERENCE.md  PHASE2_ROADMAP.md  PHASE3_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_COMPLETION_SUMMARY.md  PHASE4_DEPLOYMENT_READY.md  PHASE4_EXECUTIVE_SUMMARY.md  PHASE4_FINAL_SCALE_TEST_RESULTS.md  PHASE4_HEAVY_LOAD_TEST_COMPLETE.md  PHASE4_IMPLEMENTATION_REPORT.md  PHASE4_SCALE_TEST_REPORT.md  PHASE5_BUILD_JOURNEY.md  PHASE5_DEPLOYMENT_GUIDE.md  PHASE5_IMPLEMENTATION_COMPLETE.md  (+45 more)
.logs/: api-8000.err  api-8000.out  audit_events.jsonl  jimsai_events.sqlite3
benchmarks/: determinism_benchmark.py  hallucination_barrier.py
cli/: jimsai.py
configs/: default.yaml
datasets/: README.md  frontier_training_seed.jsonl  iterative_eval_prompts.jsonl  public_domain_training_seed.jsonl
docs/: hf_space_audit.md  (+11 more)
(+571 files in other folders)
