[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jims-ai"
version = "0.1.0"
description = "Deterministic memory-centric AI runtime based on the JIMS-AI v8 specification"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "prometheus-client>=0.20",
  "httpx>=0.27"
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-asyncio>=0.23"]
providers = [
  "boto3>=1.35",
  "celery[redis]>=5.5",
  "kagglehub==1.0.0",
  "neo4j>=5.28",
  "psycopg[binary]>=3.2",
  "redis>=5.0"
]
encoders = [
  "sentence-transformers>=3.0",
  "transformers>=4.45",
  "pillow>=10.0",
  "openai-whisper>=20240930",
  "opencv-python-headless>=4.10"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["prototype*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
